# rust-ray-tracer

./: .gitignore  Cargo.toml  README.md
examples/: render.rs  test_png.rs
src/: camera.rs  color.rs  colors.rs  consts.rs  directions.rs  hit.rs  hittables.rs  image.rs  lib.rs  lights.rs  main.rs  material.rs  ray.rs  renderer.rs  scene.rs  types.rs
src/legacy/: main.rs  scene.rs
src/logger/: Cargo.toml
src/logger/src/: lib.rs
tests/: test_rainbow.rs
